test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_if_stmt.draco
proc main() void : if a then a := 1; fi; corp;

