test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_then_as_identifier.draco
int then;
 
proc main() void : a := 1; corp;
